lustre/llite/statahead.c
@@ -1529,15 +1529,15 @@ ll_sai_unplug(struct ll_statahead_info *sai, struct ll_sa_entry *entry)
 int do_statahead_enter(struct inode *dir, struct dentry **dentryp,
                        int only_unplug)
 {
-        struct ll_inode_info     *lli   = ll_i2info(dir);
-        struct ll_statahead_info *sai   = lli->lli_sai;
-        struct dentry            *parent;
-        struct ll_sa_entry       *entry;
-        struct ptlrpc_thread     *thread;
-        struct l_wait_info        lwi   = { 0 };
-        int                       rc    = 0;
-	struct ll_inode_info     *plli;
-        ENTRY;
+	struct ll_inode_info		*lli = ll_i2info(dir);
+	struct ll_statahead_info	*sai = lli->lli_sai;
+	struct dentry			*parent;
+	struct ll_sa_entry		*entry;
+	struct ptlrpc_thread		*thread;
+	struct l_wait_info		 lwi = { 0 };
+	int				 rc = 0;
+	struct ll_inode_info		*plli;
+	ENTRY;
 
 	LASSERT(lli->lli_opendir_pid == current_pid());
 
@@ -1615,12 +1615,15 @@ int do_statahead_enter(struct inode *dir, struct dentry **dentryp,
 						ll_inode2fid(inode), &bits);
 			if (rc == 1) {
 				if ((*dentryp)->d_inode == NULL) {
-					*dentryp = ll_splice_alias(inode,
-								   *dentryp);
-					if (IS_ERR(*dentryp)) {
+					struct dentry *alias;
+
+					alias = ll_splice_alias(inode,
+								*dentryp);
+					if (IS_ERR(alias)) {
 						ll_sai_unplug(sai, entry);
-						RETURN(PTR_ERR(*dentryp));
+						RETURN(PTR_ERR(alias));
 					}
+					*dentryp = alias;
                                 } else if ((*dentryp)->d_inode != inode) {
                                         /* revalidate, but inode is recreated */
                                         CDEBUG(D_READA,
